[package]
name = "trees_with_n_nodes"
version = "0.1.0"
authors = ["SCOTT-HAMILTON <sgn.hamilton+github@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab_tree = "0.3.2"
trees = "0.4.2"
itertools = "0.10.1"
